zokrates_cli/examples/error/wrongsyntax-error.zok
//def wrong(a)
//def (a):
//def wrongtoo(a,):
def main(a):
  b = a + 5
  //c = if x < 6 then b ele 5 fi + 2
  //c = 5 + 2 * b + 5 b * 8 + a
  //c = 5 + 2 * b + 5 \ a
  //c = 5 + 2 *+ b + 5 \ a
  //c *= 1
  //c =
  //c = 7 + a +
  /// comment with one /
  //return a + b \
  return a + b
  return a
